# alexandria

./: .gitignore  Dockerfile  README.md  action.go  main.go  pyproject.toml  server.go
.github/workflows/: main.yml
app/: action.go  go.mod  main.go  server.go
app/templates/: documentation.html
example/: docker-compose.yml  ws.yaml
examples/: chat-ws.yaml
golang/: action.go  main.go  ws-documentation.html
golang_implementation/: main.go
scraper/: main.py  template.html
templates/: documentation.html
