[tool.poetry]
name = "alexandria"
version = "0.1.0"
description = "IDL for WS"
authors = ["raisultan <ki.xbozz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "5.3.1"
Mako = "1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
